# sentinel-log

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
infra/postgres/: init.sql
services/api/: pyproject.toml
services/ingestion/: Dockerfile  consumer.py  generate_dataset.py  generator.py  pyproject.toml
services/ingestion/tests/: test_consumer.py  test_generate_dataset.py  test_generator.py
services/ml/: README.md  baseline.py  features.py  pyproject.toml
services/ml/tests/: test_baseline.py  test_features.py
shared/: pyproject.toml
shared/src/shared/: schemas.py
